2017-04-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c docs/gnuplot.doc demo/armillary.dem:
	Allow polar (cylindrical) coordinates for circles in 3D plots.

2017-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_gpval_variables):  New exported variables giving
	screen coordinates of the 3D plot axial center and radius of the
	enclosing sphere. GPVAL_VIEW_XCENT GPVAL_VIEW_YCENT GPVAL_VIEW_RADIUS.

	* src/graphics.c (place_objects):  Allow placement and size of circles
	in 3D plot to use axis coordinates (used to only allow screen coords).
	As in 2D, the radius of the circle is always scaled to match the x axis
	and the circle itself is always drawn in the plane of the figure.

	* demo/armillary.dem docs/gnuplot.doc:  Document and provide example
	for use of axis coordinates to place circles in 3D.

	* demo/Makefile.am.in: Place quotes around $(GNUTERM) so that multi-word
	definitions do not gum up "make check".

	* src/plot.c src/term.c:  Defer detection of initial terminal type until
	after error handling has been set up.  This allows us to parse GNUTERM
	for terminal options in additional to the bare terminal name.
	E.g. GNUTERM="wxt size 500,500"

2017-04-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (save_command):  Don't use loadpath to choose an
	output directory.

2017-04-02  Daniel J Sebald <daniel.sebald@ieee.org>

	* src/eval.c (update_gpval_variables):  Sanity check the string
	stored in GPVAL_PWD.  However if the current directoty is invalid
	GPVAL_PWD still contains the previous string.

	* src/command.c (pwd_command):  Sanity check the validity of the
	current working directory.

2017-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c term/qt.trm src/qtterminal/qt_term.cpp
	src/qtterminal/QtGnuplotWindow.cpp: The qt terminal assumed that
	"space-raises-console" would be implemented in the core code.
	But it never was.  Instead on non-MSWin platforms hitting <space>